# 808x_walker

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.sh
install/walker_808x/lib/walker_808x/: walker
install/walker_808x/share/walker_808x/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/walker_808x/share/walker_808x/cmake/: walker_808xConfig.cmake
install/walker_808x/share/walker_808x/launch/: launch_roomba.py
launch/: launch_roomba.py
log/: latest_build
results/: cppcheck.txt  cpplint.txt  error.txt
results/rosbag2_2023_12_01-23_59_55/: metadata.yaml
results/rosbag2_2023_12_02-00_06_42/: metadata.yaml  rosbag2_2023_12_02-00_06_42_0.db3
src/: walk_algorithm.cpp
